--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "build:css": "node-sass --output-style compressed scss/estilos.scss css/styles.css"
   },
   "version": "1.0.0",
-  "devDependencies": {
-    "node-sass": "^4.14.1",
-    "nodemon": "^2.0.4"
+  "dependencies": {
+    "node-sass": "^7.0.1",
+    "nodemon": "^2.0.19"
   }
 }
